@@ -31,8 +31,8 @@
   <b><a href="http://sourceforge.net/projects/sdcc"><i>SDCC at SourceForge</i></a></b>
   <div class="submenu">
     <a href="http://sourceforge.net/project/showfiles.php?group_id=599"><i>SDCC File Releases</i></a><br />
-    <a href="http://sdcc.svn.sourceforge.net/viewvc/sdcc/trunk/sdcc/"><i>SDCC Subversion Repository</i></a><br />
-    <a href="http://sourceforge.net/projects/sdcc/forums/"><i>SDCC Forum</i></a><br />
+    <a href="https://sourceforge.net/p/sdcc/code/HEAD/tree/trunk/sdcc/"><i>SDCC Subversion Repository</i></a><br />
+    <a href="https://sourceforge.net/p/sdcc/discussion/"><i>SDCC Forum</i></a><br />
   </div>
   <br />
   <b><a href="http://sdcc.sourceforge.net/wiki/"><i>SDCC Wiki</i></a></b><br />
