@@ -1,3 +1,7 @@
+2013-03-12 Borut Razem <borut.razem AT siol.net>
+
+	* index.php, left_menu.inc: updated after project transition to Allura
+
 2012-12-04 Borut Razem <borut.razem AT siol.net>
 
 	* left_menu.inc:
